# nomad_challenge

./: .gitignore  CLAUDE.md  README.md  life_coach.py  main.ipynb  main.py  my_goals.txt  pyproject.toml  sd.ipynb
restaurant_bot/: .gitignore  main.py  models.py  output_guardrails.py
restaurant_bot/my_agents/: menu_agent.py  order_agent.py  reservation_agent.py  technical_agent.py  triage_agent.py
